Fix hero form contrast

--- a/assets/scss/6-pages/_index.scss
+++ b/assets/scss/6-pages/_index.scss
@@ -244,6 +244,7 @@ section#expect {
 
     > input[type=text] {
         background-color: rgba($gray-50, 0.25);
+        color: $gray-100;
     }
 
 }
